# Aqueduct

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  aqueduct.template.yml  aqueduct.yml.template  blueprint.yml.template  fail_apply.txt  pyproject.toml
.dev/: AUDIT_REPORT.md  JOURNAL.md  SPARK_GUIDE.md  TESTING.md
.dev/ISSUES/: ISSUE-015_freshness_quarantine_nulls.md  ISSUE-016_freshness_quarantine_metadata.md  ISSUE-017_freshness_quarantine_numeric.md  ISSUE-018_freshness_missing_column_validation.md  cli-cwd-mutation.md  missing_patch_validation_in_parser.md  test-probe-does-not-halt-blueprint.md  test_patch_commit_empty_uncommitted.md  test_patch_formatting.md  test_surveyor_populates_blueprint_source_yaml_when_file_exists.md
.dev/RESOLVED/: Audit_2026-05-05.md  ISSUE_001_SPARK_HADOOP_CONFIG_PROPAGATION.md  ISSUE_002_JDBC_INGRESS_PATH_REQUIREMENT.md  Report1.md  cli-cwd-mutation.md  config-default-model-mismatch.md  orchestration-logic-fail.md  parallel-executor-closure-serialization.md  spark-env-java-getsubject.md  test_execute_funnel_error_no_main_edge.md  test_execute_funnel_exec_error.md  test_execute_funnel_integration.md  test_execute_junction_error_no_main_edge.md  test_execute_junction_exec_error.md  test_execute_junction_integration.md  test_execute_junction_to_funnel_roundtrip.md  test_execute_probe_global_exception.md  test_expand_arcades_returns_3_tuple.md  test_failure_context_has_blueprint_source_yaml.md  test_incremental_channel_no_checkpoint_warns.md  test_init_git_not_installed.md  test_lifecycle_discrepancies.md  test_llm_system_prompt_includes_template_expressions_rule.md  test_llm_user_prompt_includes_blueprint_source_yaml.md  test_nested_arcade_provenance_tracked.md  test_patch_filename_seq.md  test_patch_reject_no_patches_dir_uses_cwd_walk_up.md  test_surveyor_sets_blueprint_source_yaml_none_when_file_missing.md
.github/workflows/: ci.yml  release.yml  test-suite.yml  version-matrix.yml
aqueduct/: __init__.py  cli.py  config.py  doctor.py  errors.py  exit_codes.py  lint.py  models.py  overrides.py  redaction.py  secrets.py  typehub.py  utils.py  warnings.py
aqueduct/agent/: __init__.py  budget.py  cascade.py  constants.py  loop.py  memory.py  parse.py  progressive.py  prompts.py  providers.py  regression_artifact.py  signature.py  toolbox.py  transcript.py
aqueduct/cli/: __init__.py  benchmark.py  blueprint.py  dev.py  diagnostics.py  drift.py  heal.py  hooks.py  mcp.py  observability.py  output.py  patch.py  project.py  run.py  stores.py  style.py
aqueduct/compiler/: __init__.py  capability_check.py  chain.py  compiler.py  expander.py  fingerprint.py  lineage.py  macros.py  models.py  provenance.py  runtime.py  type_surfaces.py  wirer.py
aqueduct/dashboard/: __init__.py  app.py
aqueduct/deploy/: __init__.py  base.py  databricks.py
aqueduct/depot/: depot.py
aqueduct/dev/: __init__.py  scaffolds.py
aqueduct/doctor/: __init__.py  base.py  checks_io.py
aqueduct/drift/: classifier.py  context.py  store.py
aqueduct/executor/: __init__.py  capabilities.py  capability_leaves.py  capability_tooling.py  channel.py  channel_ops.py  config_leaves.py  egress.py  executor.py  ingress.py  junction.py  models.py  path_keys.py  probe.py  probe_plugins.py  protocol.py  session.py  udf.py
aqueduct/infra/: __init__.py  http.py  module_loading.py
aqueduct/integrations/: __init__.py
aqueduct/mcp/: __init__.py  server.py
aqueduct/parser/: __init__.py  fs_path.py  graph.py  models.py  parser.py  resolver.py  schema.py
aqueduct/patch/: __init__.py  apply.py  ci.py  explain_gate.py  grammar.py  index.py  operations.py  preview.py  provenance.py
aqueduct/stores/: __init__.py  base.py  ddl.py  duckdb_.py  object_store.py  postgres.py  queries.py  read.py  redis_.py
aqueduct/surveyor/: __init__.py  benchmark_store.py  blob_store.py  ddl.py  error_extraction.py  llm.py  models.py  openlineage.py  scenario.py  surveyor.py  webhook.py
aqueduct/tools/: __init__.py  registry.py
aqueduct/tui/: __init__.py  app.py  data.py
blueprints/: hello.yml
demos/: TODO.md
demos/01-hello-world/: aqueduct.yml
demos/02-nyc-taxi-etl/: aqueduct.yml
demos/03-healing-demo/: README.md  aqueduct.yml
dev/ISSUES/: test_cli_test_TestError_import_mismatch.md
docs/: ALL_TABLES.md  CLI_REFERENCE.md  SPARK_GUIDE.md  TODO.md  cli_reference.md  compatibility.md  diagnostics.md  extending.md  failure_taxonomy.md  initial-design-v0.0.0.docx  observability_guide.md  production_guide.md  roadmap.md  spark_guide.md  specs.md
docs/archive/: SPECS-1.1.0.md  TEST_MANIFEST.md
docs/figures/: README_Figure1.md  README_Figure2.md  README_Figure3.md
docs/media/: README.md
docs/plans/: 2026-05-04-provenance-layer.md
examples/: aqueduct.template.yml  blueprint_comprehensive.yaml  kv_store_example.yaml
gallery/: README.md
gallery/aqtests/: README.md  (+1 more)
requirements/: ci-py311.txt  compat-py3.11.txt  compat-py3.12.txt  compat-py3.13.txt
scripts/: capabilities.py  check_commit_msg.py  ci-summary.py  lock.sh  run_snippets.sh
skills/: aqskill-audit-code.md  aqskill-audit-config.md  aqskill-audit-connect.md  aqskill-audit-health.md  aqskill-audit-style.md  aqskill-audit-tests.md  aqskill-audit.md
tests/: TEST_MANIFEST.md  conftest.py  test_airflow.py  test_audit.py  test_backlog.py  test_benchmark_store.py  test_blueprints.py  test_cli.py  test_cli_init.py  test_compiler.py  test_config.py  test_coverage_gaps.py  test_depot.py  test_executor_assert.py  test_executor_channel.py  test_executor_egress.py  test_executor_ingress.py  test_executor_orchestration.py  test_executor_parallel.py  test_executor_session.py  test_executor_spark_metrics.py  test_funnel.py  test_gallery.py  test_junction.py  test_lineage.py  test_lint.py  test_listener.py  test_llm.py  test_llm_integration.py  test_meta_ci.py  test_meta_quality.py  test_module_loading.py  test_overrides.py  test_parser.py  test_patch_apply.py  test_patch_grammar.py  test_patch_operations.py  test_phase10.py  test_phase11.py  test_phase9.py  (+11 more)
(+688 files in other folders)
