[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqueduct-core"
version = "1.0.1.post0"
description = "Agentic Spark — declarative, self-healing Apache Spark blueprints."
readme = "README.md"
authors = [
    {name = "Sadig Akhund", email = "sadigaxund@gmail.com"},
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["spark", "blueprint", "pipeline", "ETL", "data-engineering", "llm", "self-healing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "duckdb>=0.10.0",
    "sqlglot>=23.0.0",
    "ruamel.yaml>=0.18.0",
    "httpx>=0.27.0",
    "cloudpickle>=3.1.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
spark = ["pyspark>=4.0,<5.0", "delta-spark>=4.0,<5.0"]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-secret-manager>=2.20"]
azure = ["azure-keyvault-secrets>=4.8", "azure-identity>=1.17"]
# Aggregate convenience extra — pulls every supported secrets backend SDK.
secrets = [
    "aqueduct-core[aws]",
    "aqueduct-core[gcp]",
    "aqueduct-core[azure]",
]
# Phase 28 — networked store backends. Each replaces DuckDB's single-writer
# constraint for obs / lineage / depot. Postgres serves all three stores;
# Redis is depot-only.
postgres = ["psycopg2-binary>=2.9"]
redis = ["redis>=5.0"]
# Phase 31 — orchestrator integrations. Aqueduct stays engine-agnostic; each
# integration is lazy-imported from aqueduct.integrations.<name>.
# Use the slim per-scheduler extra in production, [schedulers] for the
# aggregate convenience install.
airflow = ["apache-airflow>=2.7"]
schedulers = ["aqueduct-core[airflow]"]
all = [
    "aqueduct-core[spark]",
    "aqueduct-core[secrets]",
    "aqueduct-core[postgres]",
    "aqueduct-core[redis]",
    "aqueduct-core[schedulers]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/sadigaxund/Aqueduct"
Repository = "https://github.com/sadigaxund/Aqueduct"
Issues = "https://github.com/sadigaxund/Aqueduct/issues"
Changelog = "https://github.com/sadigaxund/Aqueduct/blob/main/CHANGELOG.md"

[project.scripts]
aqueduct = "aqueduct.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["aqueduct"]

[tool.hatch.build.targets.sdist]
include = [
    "/aqueduct",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts   = "--cov=aqueduct --cov-report=term-missing"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache_aqueduct"
markers = [
    "unit: Fast unit tests that can run on every commit (no external services).",
    "integration: Tests that require a local Spark cluster, database, or long runtimes.",
    "slow: Tests that take > 2 seconds to complete.",
    "agent: Tests that require a live agent/LLM endpoint (Anthropic, Ollama).",
    "spark: Tests that require a SparkSession (local[1] ok).",
]

[tool.coverage.run]
data_file = "/tmp/.aqueduct_coverage"
