[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqueduct-core"
version = "1.2.2"
description = "Agentic Spark — declarative, self-healing Apache Spark blueprints."
readme = "README.md"
authors = [
    {name = "Sadig Akhund", email = "sadigaxund@gmail.com"},
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["spark", "blueprint", "pipeline", "ETL", "data-engineering", "llm", "self-healing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "duckdb>=0.10.0",
    "sqlglot>=23.0.0",
    "ruamel.yaml>=0.18.0",
    "httpx>=0.27.0",
    "cloudpickle>=3.1.2",
    "pytz>=2024.1",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
spark = ["pyspark>=4.0,<5.0", "delta-spark>=4.0,<5.0"]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-secret-manager>=2.20"]
azure = ["azure-keyvault-secrets>=4.8", "azure-identity>=1.17"]
# Aggregate convenience extra — pulls every supported secrets backend SDK.
secrets = [
    "aqueduct-core[aws]",
    "aqueduct-core[gcp]",
    "aqueduct-core[azure]",
]
# Phase 28 — networked store backends. Each replaces DuckDB's single-writer
# constraint for obs / lineage / depot. Postgres serves all three stores;
# Redis is depot-only.
postgres = ["psycopg2-binary>=2.9"]
redis = ["redis>=5.0"]
# Optional last-ditch JSON repair for malformed LLM responses (unescaped
# quotes, missing commas, smart quotes). Without it, _parse_patch_spec
# falls back to surfacing the strict JSONDecodeError to the reprompt loop —
# no functional regression, just lower first-attempt success.
llm = ["json-repair>=0.30"]
# Aggregate convenience extra — pulls every networked store backend.
stores = [
    "aqueduct-core[postgres]",
    "aqueduct-core[redis]",
]
# Phase 31 — orchestrator integrations. Aqueduct stays engine-agnostic; each
# integration is lazy-imported from aqueduct.integrations.<name>.
# Use the slim per-scheduler extra in production, [schedulers] for the
# aggregate convenience install.
airflow = ["apache-airflow>=2.7"]
schedulers = ["aqueduct-core[airflow]"]
all = [
    "aqueduct-core[spark]",
    "aqueduct-core[secrets]",
    "aqueduct-core[stores]",
    "aqueduct-core[schedulers]",
    "aqueduct-core[llm]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/sadigaxund/Aqueduct"
Repository = "https://github.com/sadigaxund/Aqueduct"
Issues = "https://github.com/sadigaxund/Aqueduct/issues"
Changelog = "https://github.com/sadigaxund/Aqueduct/blob/main/CHANGELOG.md"

[project.scripts]
aqueduct = "aqueduct.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["aqueduct"]

[tool.hatch.build.targets.sdist]
include = [
    "/aqueduct",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# `--basetemp` pins ONE fixed temp root that pytest WIPES at the start of every
# session and recreates fresh. This is the key anti-accumulation knob: per-test
# `tmp_path` dirs, the Spark warehouse / scratch (routed through tmp_path_factory
# in tests/conftest.py), and duckdb scratch all land under it and never pile up
# run-over-run — the tmpfs-quota exhaustion (Errno 122) and the stale-lock
# `pytest-of-<user>/pytest-N` basetemp races both go away because each run starts
# from a clean, freshly-locked dir. WARNING: pytest deletes this dir wholesale at
# startup — it must stay dedicated (never point it at a dir holding other files).
# tmp_path_retention_* still trims within a session as a belt-and-braces measure.
[tool.pytest.ini_options]
addopts   = "--cov=aqueduct --cov-report=term-missing --basetemp=/tmp/aqueduct-pytest"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache_aqueduct"
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"
markers = [
    "unit: Fast unit tests that can run on every commit (no external services).",
    "integration: Tests that require a local Spark cluster, database, or long runtimes.",
    "slow: Tests that take > 2 seconds to complete.",
    "agent: Tests that require a live agent/LLM endpoint (Anthropic, Ollama).",
    "spark: Tests that require a SparkSession (local[1] ok).",
    "airflow: Tests that require apache-airflow (orchestrator integration).",
]

[tool.coverage.run]
data_file = "/tmp/.aqueduct_coverage"
